Clean up debug elements and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,38 @@
+# Python
 __pycache__/
-*.pyc
-instance/chat.db
+*.py[cod]
+*$py.class
+
+# Virtual Environment
 venv/
+venv310/
+venvv/
 .env
+env/
+ENV/
+
+# Flask instance folder
+instance/
+
+# Database
+*.db
+*.sqlite3
+
+# IDE specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Project specific
+logs/
+uploads/
